# bfjit

./: .gitmodules  CMakeLists.txt  Doxyfile  GLOBAL_DOCUMENTATION.hpp  config.hpp.in
app/include/: options.hpp
app/src/: main.cpp  options.cpp
doc/html/: ArgException_8h_source.html  ArgTraits_8h_source.html  Arg_8h_source.html  CmdLineInterface_8h_source.html  CmdLineOutput_8h_source.html  CmdLine_8h_source.html  Constraint_8h_source.html  DocBookOutput_8h_source.html  GLOBAL__DOCUMENTATION_8hpp_source.html  HelpVisitor_8h_source.html  IgnoreRestVisitor_8h_source.html  MultiArg_8h_source.html  MultiSwitchArg_8h_source.html  OptionalUnlabeledTracker_8h_source.html  StandardTraits_8h_source.html  StdOutput_8h_source.html  SwitchArg_8h_source.html  UnlabeledMultiArg_8h_source.html  UnlabeledValueArg_8h_source.html  ValueArg_8h_source.html  ValuesConstraint_8h_source.html  VersionVisitor_8h_source.html  Visitor_8h_source.html  XorHandler_8h_source.html  ZshCompletionOutput_8h_source.html  annotated.html  ast_8hpp_source.html  auto__cpu__timer_8hpp_source.html  catch_8hpp_source.html  classbfjit_1_1ast-members.html  classbfjit_1_1ast.html  classbfjit_1_1io__ast-members.html  classbfjit_1_1io__ast.html  classbfjit_1_1jit__function-members.html  classbfjit_1_1jit__function.html  classbfjit_1_1loop__ast-members.html  classbfjit_1_1loop__ast.html  classbfjit_1_1movement__ast-members.html  classbfjit_1_1movement__ast.html  classbfjit_1_1mutation__ast-members.html  (+48 more)
doc/latex/: annotated.tex  classbfjit_1_1ast.eps  classbfjit_1_1ast.tex  classbfjit_1_1io__ast.eps  classbfjit_1_1io__ast.tex  classbfjit_1_1jit__function.tex  classbfjit_1_1loop__ast.eps  classbfjit_1_1loop__ast.tex  classbfjit_1_1movement__ast.eps  classbfjit_1_1movement__ast.tex  classbfjit_1_1mutation__ast.eps  classbfjit_1_1mutation__ast.tex  classbfjit_1_1parse__error.tex  classbfjit_1_1position.tex  hierarchy.tex  (+8 more)
include/: Windows.h-shim.hpp  ast.hpp  jit-arm.hpp  jit-x86.hpp  jit-x86_64.hpp  jit.hpp  lex.hpp  optimize.hpp  parse.hpp  position.hpp  token.hpp
src/: ast.cpp  jit-arm-unix.cpp  jit-arm.cpp  jit-x86-common.cpp  jit-x86-unix.cpp  jit-x86-w32.cpp  jit-x86-win.cpp  jit-x86.cpp  jit-x86_64-common.cpp  jit-x86_64-unix.cpp  jit-x86_64-win.cpp  lex.cpp  optimize.cpp  parse.cpp  position.cpp  token.cpp
test/: FinallyTakingOverTheWorld.b  TakingOverTheWorld.b  golden.b
(+82 files in other folders)
