CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
SET(CMAKE_DISABLE_SOURCE_CHANGES ON)
SET(CMAKE_DISABLE_IN_SOURCE_BUILD ON)
PROJECT(bfjit)

# Global settings
SET(BFJIT_VERSION_MAJOR 0)
SET(BFJIT_VERSION_MINOR 1)

SET(ARCH_X86 0)
SET(ARCH_X86_64 1)
SET(ARCH_ARM 16)

SET(OS_WINDOWS 0)
SET(OS_UNIX 16)

## D-D-DOUBLE RAINBOW!?
SET(TARGET_ARCH "${${TARGET_ARCH}}")
SET(TARGET_OS "${${TARGET_OS}}")

SET(CXX_STANDARD_REQUIRED ON)
CONFIGURE_FILE(
    "${PROJECT_SOURCE_DIR}/config.hpp.in"
    "${PROJECT_BINARY_DIR}/config.hpp")


# Dependencies
SET(DEP_DIR "${PROJECT_SOURCE_DIR}/dep")
SET(VARIANT_INCLUDE_DIR "${DEP_DIR}/variant/include")
SET(TCLAP_INCLUDE_DIR "${DEP_DIR}/tclap-1.2.1/include")


# Library
SET(LIB_NAME    "lib${PROJECT_NAME}")
SET(LIB_DIR     "${PROJECT_SOURCE_DIR}")
SET(LIB_SRC_DIR "${LIB_DIR}/src")
SET(LIB_INC_DIR "${LIB_DIR}/include")

ADD_LIBRARY("${LIB_NAME}"
    "${LIB_SRC_DIR}/ast.cpp"
    "${LIB_SRC_DIR}/jit-arm-common.cpp"
    "${LIB_SRC_DIR}/jit-arm-unix.cpp"
    "${LIB_SRC_DIR}/jit-x86-common.cpp"
    "${LIB_SRC_DIR}/jit-x86-unix.cpp"
    "${LIB_SRC_DIR}/jit-x86-win.cpp"
    "${LIB_SRC_DIR}/jit-x86_64-common.cpp"
    "${LIB_SRC_DIR}/jit-x86_64-win.cpp"
    "${LIB_SRC_DIR}/jit-x86_64-unix.cpp"
    "${LIB_SRC_DIR}/lex.cpp"
    "${LIB_SRC_DIR}/optimize.cpp"
    "${LIB_SRC_DIR}/parse.cpp"
    "${LIB_SRC_DIR}/position.cpp"
    "${LIB_SRC_DIR}/token.cpp")
TARGET_INCLUDE_DIRECTORIES("${LIB_NAME}" PUBLIC
    "${LIB_INC_DIR}"
    "${PROJECT_BINARY_DIR}"
    "${VARIANT_INCLUDE_DIR}")
TARGET_LINK_LIBRARIES("${LIB_NAME}" PUBLIC
    "${Boost_LIBRARIES}")

SET_PROPERTY(TARGET "${LIB_NAME}" PROPERTY CXX_STANDARD 14)
SET_PROPERTY(TARGET "${LIB_NAME}" PROPERTY OUTPUT_NAME "${PROJECT_NAME}")


# Application
SET(APP_NAME    "${PROJECT_NAME}")
SET(APP_DIR     "${PROJECT_SOURCE_DIR}/app")
SET(APP_SRC_DIR "${APP_DIR}/src")
SET(APP_INC_DIR "${APP_DIR}/include")


ADD_EXECUTABLE("${APP_NAME}"
    "${APP_SRC_DIR}/main.cpp"
    "${APP_SRC_DIR}/options.cpp")
TARGET_INCLUDE_DIRECTORIES("${APP_NAME}" PUBLIC
    "${APP_INC_DIR}"
    "${PROJECT_BINARY_DIR}"
    "${LIB_INC_DIR}"
    "${VARIANT_INCLUDE_DIR}"
    "${TCLAP_INCLUDE_DIR}")
TARGET_LINK_LIBRARIES("${APP_NAME}" PUBLIC
    "${LIB_NAME}")

SET_PROPERTY(TARGET "${APP_NAME}" PROPERTY CXX_STANDARD 14)
